# TowDefGame

./: Cargo.toml  build.rs  readme.md
lib/gl/: Cargo.toml
lib/gl/src/: lib.rs
res/shaders/: tex.frag  tex.vert
res/shaders/render_gl/: debug_lines.frag  debug_lines.vert
res/shaders/textured/: tex.frag  tex.vert
src/: VertexBuffer.rs  camera.rs  debug.rs  main.rs  resources.rs  square.rs  textured_square.rs  triangle.rs
src/camera/: mod.rs  target_camera.rs
src/render_gl/: buffer.rs  data.rs  mod.rs  shader.rs  texture.rs
src/render_gl/debug_lines/: mod.rs
