[package]
name = "tow_def_game"
version = "0.1.0"
authors = ["Tim Van Dyke <vandykti@mail.gvsu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.1"
rusttype = "0.8.2"
cgmath = "0.17.0"
gl = "0.14.0"
gl_generator = "0.14.0"

[dependencies.sdl2]
version = "0.33.0"
features = ["bundled", "static-link"]
# default-features = false
# features = ["bundled", "static-link", "image"]
# mpv-audio = "0.1.1"