[package]
name = "tow_def_game"
version = "0.1.0"
authors = ["Tim Van Dyke <vandykti@mail.gvsu.edu>"]
edition = "2018"

[dependencies]
gl = { path = "lib/gl" }
failure = "0.1.7"
png = "0.16.1"
rusttype = "0.8.2"
cgmath = "0.17.0"

[dependencies.sdl2]
version = "0.33.0"
features = ["bundled", "static-link"]

[build-dependencies]
walkdir = "2.3.1"

[features]
gl_debug = ["gl/debug"]

# gl_generator = "0.14.0"
# default-features = false
# features = ["bundled", "static-link", "image"]
# mpv-audio = "0.1.1"