[package]
name = "tow_def_game"
version = "0.1.0"
authors = ["Tim Van Dyke <vandykti@mail.gvsu.edu>"]
edition = "2018"

[dependencies]
gl = { path = "lib/gl" }
failure = "0.1.7"
image = "0.20.0"
# png = "0.16.1"
rusttype = "0.8.2"
render_gl_derive = { path = "render_gl_derive" }
vec-2-10-10-10 = "0.1.2"
half = "1.5.0"
nalgebra = "0.20.0"

[dependencies.sdl2]
version = "0.33.0"
features = ["bundled", "static-link"]

[build-dependencies]
walkdir = "2.3.1"

[features]
gl_debug = ["gl/debug"]
