[package]
name = "gl"
version = "0.1.0"
authors = ["Tim Van Dyke <vandykti@mail.gvsu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
gl_generator = { version = "0.14.0" }
gl_generator_profiling_struct = "0.1.2"

[features]
debug = []